fix off-centre navbar thing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -461,7 +461,7 @@ main {
         form input[type="text"], input[type="email"] {
             width: 95%;
         }
-        
+
         .contact-line-break {
             margin-top: 5px;
             margin-bottom: 10px;
@@ -663,7 +663,7 @@ main {
 .order-actions .button {
     transition: background-color 0.3s ease, transform 0.2s ease;
     padding: 6px 10px;
-    font-size: 13px; 
+    font-size: 13px;
     white-space: nowrap; /* prevent text from wrapping */
 
 }
@@ -977,7 +977,7 @@ footer {
             background-color: #F9D9D9;
         }
     }
-    
+
 
     /* input:focus, select:focus {
         outline: none;
@@ -1509,7 +1509,7 @@ footer {
     opacity: 0;
     animation: fadedown 0.8s ease-out forwards;
     width: 100%;
-    z-index: 100; 
+    z-index: 100;
     position: relative;
 
     .navbardiv {
@@ -1629,7 +1629,7 @@ footer {
         display: inline-block;
         list-style: none;
         text-decoration: none;
-        padding: 10px 0px 80px 80px;
+        padding: 10px 80px 0px 80px;
 
         a {
             color: var(--text-colour);
@@ -1677,7 +1677,7 @@ footer {
 }
 
 .message {
-    background-color: #D9F9D9;  
+    background-color: #D9F9D9;
     border: 1px solid green;
 }
 
@@ -2045,7 +2045,7 @@ footer {
     align-items: center;
     justify-content: center;
 
-    
+
 }
 
 .featured-item-container {
@@ -2091,7 +2091,7 @@ footer {
     list-style: none;
     text-decoration: none;
     color: rgb(0, 0, 0);
-    
+
 }
 
 
@@ -2179,7 +2179,7 @@ footer {
     left: 50%;
     background-color: rgba(62, 71, 102, 0.377);
     padding-bottom: 60px;
-    
+
 }
 
 #parallax-info h3 {
@@ -2481,11 +2481,11 @@ footer {
                 color: red;
                 font-size: 14px;
                 font-weight: bold;
-                display: none; 
-                padding: 5px 0; 
-                border-radius: 10px; 
+                display: none;
+                padding: 5px 0;
+                border-radius: 10px;
             }
-            
+
             .error-message.active {
                 display: block;
             }
@@ -2493,7 +2493,7 @@ footer {
             .form-group {
                 margin-bottom: 10px;
             }
-            
+
             input.error {
                 border-color: red !important;
                 background-color: #F9D9D9 !important;
@@ -3027,7 +3027,7 @@ label {
             padding: 0;
             border: 1px solid var(--border-color);
             border-radius: 0;
-        }   
+        }
 
         .size-selection:hover {
             background-color: var(--btn-hover-colour);
@@ -3253,20 +3253,20 @@ label {
         margin-bottom: 15px;
         padding: 20px;
     }
-    
+
      .tabs-container {
         display: flex;
         justify-content: center;
         margin-bottom: 20px;
     }
-    
+
     .tab-btn {
         padding: 10px 20px;
-        font-weight: bold;  
+        font-weight: bold;
         text-transform: uppercase;
         margin: 0 5px;
         transition: background-color 0.3s ease;
-    } 
+    }
 
     /* Button Colour to*/
     .tab-btn.active-tab {
@@ -3468,13 +3468,13 @@ label {
     font-size: 20px;
     flex-direction: row-reverse;
     margin: 80px 300px;
-    padding: 30px 50px;     
+    padding: 30px 50px;
     line-height: 1.7;
     background-color: #d5d4d4;
 }
 @media (max-width: 768px) {
     #sponsor-banner-container {
-        flex-direction: column; 
+        flex-direction: column;
     }
 
     #sponsor-text {
@@ -3483,7 +3483,7 @@ label {
         width: 50vw;
         padding: 20px;
     }
-    
+
     #sponsor-text-banner{
         left: 10%;
     }
@@ -3492,19 +3492,19 @@ label {
         display: none;
     }
     #sponsor-pic, #athlete-pic {
-        width: 100%; 
+        width: 100%;
         height: auto;
     }
     #sponsor-join-text {
-        padding: 0 5px; 
+        padding: 0 5px;
         font-size: 16px;
     }
     #sponsor-parallax-info{
         font-size: 16px;
         width: 80vw;
         top: 5%;
-    }   
-   
+    }
+
 }
 
 
